tdf#89920 - Adjust row height after setting a cell text

Change-Id: I074442eacc84c18c024a5348cb844f323f79bd48